# GodotVRVideoPlayer

./: .gitignore  CMakeLists.txt  README.md
MyModules/: .clang-format
MyModules/ffmpeg_module/: SCsub  ffmpeg_media_stream.cpp  ffmpeg_media_stream.h  register_types.cpp  register_types.h  structs.h  threadsafe_blocking_queue.h  video_stream_ffmpeg.cpp  video_stream_ffmpeg.h
MyModules/my_fbx_importer/: config.py  editor_scene_importer_my_fbx.cpp  editor_scene_importer_my_fbx.h  register_types.cpp  register_types.h
MyModules/my_module/: MyNode.cpp  MyNode.h  MySpatial.cpp  MySpatial.h  SCsub  register_types.cpp  register_types.h
Project/ProjectForEditorDev/: .gitignore  project.godot
Project/ProjectForEditorDev/Scenes/Test1/: Test1.tscn  Test1_Spatial.gd
Project/VrPlayer/: .gitignore  project.godot
Project/VrPlayer/Gui/: VideoPlayer.tscn
Project/VrPlayer/Gui/PlayingControlPanel/: PlayingControlPanel.gd  PlayingControlPanel.tscn  ProgressDraggingArea.gd
Project/VrPlayer/Gui/TheaterPlayer/: Player2D.material  TheaterPlayer.gd  TheaterPlayer.tscn
Project/VrPlayer/Gui/VideoPlayer/: VideoPlayer.gd  VideoPlayer.tscn
Project/VrPlayer/Materials/: Nv12_2D.material  Nv12_3D.material  Nv12_Panorama.material  Yuv420P_2D.material  Yuv420P_3D.material  Yuv420P_Panorama.material
Project/VrPlayer/Scenes/Flat2DPlayer/: Flat2DPlayer.gd  Flat2DPlayer.tscn
Project/VrPlayer/Scenes/Main/: Main.gd  main.tscn
Project/VrPlayer/Scenes/PanoramaPlayer/: PanoramaPlayer.gd  PanoramaPlayer.tscn
Project/VrPlayer/Scenes/SensorTest/: SensorTest.gd  SensorTest.tscn
Project/VrPlayer/Scenes/TheaterPlayer/: TheaterPlayer.gd  TheaterPlayer.tscn
Project/VrPlayer/Scenes/VrPlayer/: VrPlayer.gd  VrPlayer.tscn
Project/VrPlayer/Scenes/VrPlayer/Gui/: Setting.gd  Setting.tscn
Project/VrPlayer/Scripts/: FPSCamera.gd  FileUtils.gd  SensorCameraController.gd  VideoPlayer.gd
Project/VrPlayer/Shaders/: Nv12_2D.gdshader  Nv12_3D.gdshader  Nv12_Panorama.gdshader  Yuv420P_2D.gdshader  Yuv420P_3D.gdshader  Yuv420P_Panorama.gdshader
